--- a/khan-exercises/exercises/reading_tables_2.html
+++ b/khan-exercises/exercises/reading_tables_2.html
@@ -48,7 +48,7 @@
                 return [ enrollments, answer ];
             })()
         </var>
-        <var id="PROBLEM">[ "toont de inschrijvingen voor vier basisscholen voor groep 3 t/m 5", "toont de hoeveelheid kippen die vier vrienden tussen januari en maart verkocht hebben", "toont de punten die vier spelers in een benefietwedstrijd gescoord hebben", "toont het aantal zonnepanelen die per provincie ge&iuml;nstalleerd zijn afgelopen jaar" ][ INDEX ]</var>
+        <var id="PROBLEM">[ "toont de inschrijvingen voor vier basisscholen voor groep 3 t/m 5", "toont de hoeveelheid kippen die vier vrienden tussen januari en maart verkocht hebben", "toont de punten die vier spelers in een benefietwedstrijd gescoord hebben", "toont het aantal zonnepanelen dat per provincie ge&iuml;nstalleerd is afgelopen jaar" ][ INDEX ]</var>
         <var id="HEADER">[ "Scholen", "Boeren", "Spelers", "Provincies" ][ INDEX ]</var>
         <var id="UNIT">[ "studenten", "kippen", "punten", "zonnepanelen" ][ INDEX ]</var>
         <var id="HINT1">
@@ -64,7 +64,7 @@
     <div class="problems">
         <div>
             <p>De tabel hieronder <var>PROBLEM</var>, maar er mist &eacute;&eacute;n gegeven.</p>
-            <p class="question">Welk nummer hoort in de lege cel?</p>
+            <p class="question">Welk getal hoort in de lege cel?</p>
             <div class="fake_header reading">
                 <span><var>HEADER</var></span><span data-each="COLUMNS as i, column"><var>column</var></span>
             </div>
