Update exercises: breuken_vergelijken_2.html decimals_on_the_number_line_2.html division_0.5.html linear_equations_1.html linear_equations_4.html number_line_3.html place_number_in_boxes.html reading_bar_charts_2.html tafel_van_12510.html telling_time_interactive.html

--- a/khan-exercises/exercises/division_0.5.html
+++ b/khan-exercises/exercises/division_0.5.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <p data-else data-tt="hint3">
-                Het delen van elk willekeurig getal bij 1 is gelijk aan zichzelf.
+                Het delen van elk willekeurig getal door 1 is gelijk aan zichzelf.
             </p>
             <div class="graphie" data-update="numbers">
                 KhanUtil.currentGraph.labelHolder.remove();
