--- a/khan-exercises/exercises/linear_equations_1.html
+++ b/khan-exercises/exercises/linear_equations_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math math-format">
+<html data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
     <title>Lineaire vergelijkingen 1</title>
@@ -24,7 +24,7 @@
 
         <div class="problems">
             <div>
-                <p data-tt="question1" class="question">Los <code>x</code> op:</p>
+                <p data-tt="question1" class="question">Los op voor <code>x</code>:</p>
                 <div><code><var>A</var>x = <var>D</var></code></div>
 
                 <p class="solution"><var>D / A</var></p>
@@ -33,7 +33,7 @@
 
         <div class="hints">
             <div>
-                <p data-tt="hint1" >Vermenigvuldig beide kanten door <code><var>ONE_OVER_A</var></code>.</p>
+                <p data-tt="hint1" >Vermenigvuldig beide kanten met <code><var>ONE_OVER_A</var></code>.</p>
                 <p><code>(<var>ONE_OVER_A</var>) \cdot (<var>A</var>x) = (<var>ONE_OVER_A</var>) \cdot (<var>D</var>)</code></p>
             </div>
             <div>
