--- a/khan-exercises/exercises/place_number_in_boxes.html
+++ b/khan-exercises/exercises/place_number_in_boxes.html
@@ -17,7 +17,7 @@
     <div class="problems">
         <div>
             <p class="problem">
-                Hieronder zie je een box van 100 bij 100 blokjes. Elk blokje stelt een getal voor. Het blokje linksbovenin is het getal 1, en het blokje rechtsonderin is het getal 100. Bij elke rij die je omlaag gaat, komt er 10 bij, en elke kolom die je naar rechts gaat, komt er 1 bij.
+                Hieronder zie je een box van 10 bij 10 blokjes. Elk blokje stelt een getal voor. Het blokje linksbovenin is het getal 1, en het blokje rechtsonderin is het getal 100. Bij elke rij die je omlaag gaat, komt er 10 bij, en elke kolom die je naar rechts gaat, komt er 1 bij.
             </p>
             <p class="question">
                 Welk blokje stelt het getal <code><var>A</var></code> voor?
@@ -61,7 +61,7 @@
             </div>
 
             <div class="solution" data-type="custom">
-                <span class="instruction">Klik op het blokje in de 100 bij 100 box waar het getal <var>A</var> bij hoort. </span>
+                <span class="instruction">Klik op het blokje in het 10 bij 10 vierkant dat bij het getal <var>A</var> hoort. </span>
                 <div class="guess"> graph.guess </div>
                 <div class="validator-function">
                     if (graph.guess == A) {
