--- a/khan-exercises/exercises/tafel_van_12510.html
+++ b/khan-exercises/exercises/tafel_van_12510.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math word-problems getallen graphie">
+<html data-require="math word-problems getallen graphie">
 <head>
     <meta charset="UTF-8" />
     <title>Tafels van 1, 2, 5 en 10</title>
@@ -26,7 +26,7 @@
                 <div class="solution"><var>Answer</var>
                 </div> 
                 <div class="hints">
-                     <p>Dit is onderdeel van de tafel van <var>B</var>. Denk aan de tafel van <var>B</var> in je hoofd.
+                     <p>Dit is onderdeel van de tafel van <var>B</var>. Denk aan de tafel van <var>B</var>.
                     </p>
                     <div>Dit is de tafel van <var>B</var> op volgorde:
                         <br>1 x <var>B</var> = <var> 1 * B</var>
