--- a/khan-exercises/exercises/telling_time_interactive.html
+++ b/khan-exercises/exercises/telling_time_interactive.html
@@ -2,7 +2,7 @@
 <html data-require="math math-format graphie time interactive angles word-problems">
 <head>
     <meta charset="UTF-8" />
-    <title>Setting time</title>
+    <title>Klok zetten</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -243,7 +243,6 @@
                     <p>Laten we hierna de <span class="hint_blue" style="font-weight: bold">uur</span>wijzer instellen.</p>
 
                     <div>
-                        <p>De 12 lange markeringen komen overeen met het aantal uren in de dag (we nemen AM/PM tijd aan).</p>
                         <p>Als het <code>0</code> minuten is, hoort de uurwijzer direct op het overeenkomende uurmarkering te zitten. Voor elk ander aantal minuten moet de uurwijzer echter evenredig voorbij de uurmarkering zitten.</p>    
                     </div>
 
