--- a/khan-exercises/exercises/decimals_on_the_number_line_2.html
+++ b/khan-exercises/exercises/decimals_on_the_number_line_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math math-format graphie word-problems interactive">
+<html data-require="math math-format graphie word-problems interactive">
 <head>
     <meta charset="UTF-8" />
     <title>Kommagetallen op de getallenlijn 2</title>
@@ -22,7 +22,7 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p data-tt="question1">Move the <strong><code>\color{orange}{\text{orange dot}}</code></strong> to   <strong><code>\color{orange}{<var>SOLUTION</var>}</code></strong> on the number line. The distance between adjacent tick marks is 0.5.</p>
+                <p data-tt="question1">Plaats de <strong><code>\color{orange}{\text{oranje stip}}</code></strong> op de getallenlijn bij <strong><code>\color{orange}{<var>SOLUTION</var>}</code></strong>. De afstand tussen twee opeenvolgende streepjes is 0,5.</p>
                 <div class="graphie" id="number-line">
                     init({
                         range: [ [LOWER_BOUND - 1, UPPER_BOUND + 1], [-1, 1] ],
@@ -63,20 +63,20 @@
                 </div>
             </div>
                 <div class="solution" data-type="multiple">
-                <span data-tt="question2">Move the orange dot to select your answer.</span>
+                <span data-tt="question2">Sleep de oranje stip naar de juiste positie.</span>
                 <div class="sol" data-type="decimal" style="visibility:hidden"><var>SOLUTION</var></div>
             </div>
 
             <div class="hints">
-                <p data-tt="hint1"> Because <code>\color{orange}{<var>SOLUTION</var>}</code> is <span data-if="SOLUTION > 0">positive</span><span data-else>negative</span> the orange dot will be to the <span data-if="SOLUTION > 0">right</span><span data-else>left</span> of 0.</p>
+                <p data-tt="hint1">Omdat <code>\color{orange}{<var>SOLUTION</var>}</code> <span data-if="SOLUTION > 0">positief</span><span data-else>negatief</span> is, moet de oranje stip <span data-if="SOLUTION > 0">rechts</span><span data-else>links</span> van de 0 staan.</p>
                 <span data-if="abs(SOLUTION) > 1">
                     <div>
-                        <p data-tt="hint2">Separate the decimal from the whole number:</p>
+                        <p data-tt="hint2">Scheid de decimaal van het gehele getal:</p>
                         <p><code>\color{orange}{<var>SOLUTION</var>}</code> = <code>\color{blue}{<var>SOLUTION_WHOLE</var>}</code> + <code>\color{blue}{<var>SOLUTION_DECIMAL</var>}</code>
                     </div>
                 </span>
                 <div>
-                    <p data-tt="hint3">Therefore, we know <code>\color{orange}{<var>SOLUTION</var>}</code> lies between <code>\color{orange}{<var>SOLUTION_WHOLE</var>}</code> and <code>\color{orange}{<var>SOLUTION_WHOLE + (SOLUTION > 0 ? 1 : -1)</var>}</code> on the number line.</p>
+                    <p data-tt="hint3">We weten nu dus dat <code>\color{orange}{<var>SOLUTION</var>}</code> zich op de getallenlijn tussen de <code>\color{orange}{<var>SOLUTION_WHOLE</var>}</code> en de <code>\color{orange}{<var>SOLUTION_WHOLE + (SOLUTION > 0 ? 1 : -1)</var>}</code> bevindt.</p>
                     <div class="graphie" data-update="number-line">
                         style({ stroke: "#FFA500", strokeWidth: 3.5 });
                         line( [SOLUTION_WHOLE, -0.2], [SOLUTION_WHOLE, 0.2]);
@@ -90,14 +90,14 @@
                         line( [ 0, 0 ], [ SOLUTION, 0 ] );
                         movablePoint.visibleShape.toFront();
                     </div>
-                    <p data-tt="hint4">The orange dot should be shifted to the position <code>\color{orange}{<var>SOLUTION</var>}</code> right of 0.</p>
+                    <p data-tt="hint4">De oranje stip moet naar <code>\color{orange}{<var>SOLUTION</var>}</code>.</p>
                 </div>
                 <div>
                     <div class="graphie" data-update="number-line">
                         label( [ SOLUTION, -0.53 ],  SOLUTION, "center", { color: "#FFA500" });
                         movablePoint.moveTo( SOLUTION, 0 );
                     </div>
-                    <p data-tt="hint5">The orange number shows where <code>\color{orange}{<var>SOLUTION</var>}</code> is on the number line.</p>
+                    <p data-tt="hint5">Het oranje getal toont waar <code>\color{orange}{<var>SOLUTION</var>}</code> op de getallenlijn is.</p>
                 </div>
 
             </div>
