--- a/khan-exercises/exercises/linear_equations_4.html
+++ b/khan-exercises/exercises/linear_equations_4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math math-format">
+<html data-require="math math-format">
 <head>
     <meta charset="UTF-8" />
     <title>Lineaire vergelijkingen 4</title>
@@ -17,7 +17,7 @@
                     <var id="D">randRangeNonZero( -6, 6 )</var>
                     <var id="ANSWER">( B - A * D ) / ( A * C )</var>
                 </div>
-                <p data-tt="question1" class="question">Los <code>x</code> op:</p>
+                <p data-tt="question1" class="question">Los op voor <code>x</code>:</p>
                 <div><code><var>A</var> = \dfrac{<var>B</var>}{<var>expr(["*", C, "x"])</var> + <var>D</var>}</code></div>
 
                 <p class="solution"><var>ANSWER</var></p>
