--- a/khan-exercises/exercises/number_line_3.html
+++ b/khan-exercises/exercises/number_line_3.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie word-problems">
 <head>
     <meta charset="UTF-8" />
-    <title>Number line 3</title>
+    <title>Getallenlijn 3</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
