--- a/khan-exercises/exercises/divisibility.html
+++ b/khan-exercises/exercises/divisibility.html
@@ -48,10 +48,10 @@
         </div>
 
         <div class="hints">
-            <p data-tt="hint1">The prime factorization of <code><var>A</var></code> is <code><var>getPrimeFactorization( A ).join( "\\times" )</var></code>.</p>
-            <p data-tt="hint2">The prime factorization of <code><var>B</var></code> is <code><var>getPrimeFactorization( B ).join( "\\times" )</var></code>.</p>
-            <p data-tt="hint3">So, any number divisible by both must have <code><var>LCM_FACTORIZATION.join( "\\times" )</var></code> as part of its prime factorization.</p>
-            <p data-tt="hint4">Such a number is divisible by <code><var>ANSWER</var></code>, since the prime factorization of <code><var>ANSWER</var></code> is <code><var>getPrimeFactorization( ANSWER ).join( "\\times" )</var></code>.</p>
+            <p data-tt="hint1">Het ontbinden in priemgetallen van <code><var>A</var></code> is <code><var>getPrimeFactorization( A ).join( "\\times" )</var></code>.</p>
+            <p data-tt="hint2">Het ontbinden in priemgetallen van <code><var>B</var></code> is <code><var>getPrimeFactorization( B ).join( "\\times" )</var></code>.</p>
+            <p data-tt="hint3">Dus, elk getal dat door beide getallen gedeeld kan worden moet <code><var>LCM_FACTORIZATION.join( "\\times" )</var></code> als deel van het ontbinden in priemgetallen bevatten.</p>
+            <p data-tt="hint4">Zo'n getal is deelbaar door <code><var>ANSWER</var></code>, aangezien het ontbinden in priemgetallen van <code><var>ANSWER</var></code> gelijk is aan <code><var>getPrimeFactorization( ANSWER ).join( "\\times" )</var></code>.</p>
         </div>
     </div>
 </body>
