fixes display of rest

--- a/khan-exercises/exercises/division_3.html
+++ b/khan-exercises/exercises/division_3.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="graphie" data-update="numbers">
-                drawDigits2( [ "\\text{R"+FINAL_REMAINDER+"}" ],DIVIDEND_DIGITS.length+0.5, 0 );
+                drawDigits( [ "\\text{R"+FINAL_REMAINDER+"}" ],DIVIDEND_DIGITS.length*2.8, 0 );
             </div>
         </div>
     </div>
