Fix for NaN/undefined problem addition_1_2, needs testing before deployment

--- a/khan-exercises/exercises/addition_1_2.html
+++ b/khan-exercises/exercises/addition_1_2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html data-translatable data-require="math graphie graphie-helpers-arithmetic liesbeth-helpers" >
+<html data-translatable data-require="math graphie dutchadder3 liesbeth-helpers" >
 <head>
     <meta charset="UTF-8" />
-    <title>Addition 3 </title>
+    <title>Optellen </title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
     <div class="exercise">
         <div class="vars">
-		   
-			
+
+
 			<var id="A">getSmallDigitNumber()</var>
           
 			<var id="B">getSmallDigitNumber()</var>
@@ -20,7 +20,7 @@
     <div class="problems">
         <div>
             <div class="graphie" id="numbers">
-                graph.adder = new Adder( A, B );
+                graph.adder = new AdderTwo( A, B );
                 graph.adder.show();
                 DUMMY = Array( graph.adder.getNumHints() );
             </div>
