Second exercise for Linear Algebra MOOC

--- a/khan-exercises/exercises/vector_length.html
+++ b/khan-exercises/exercises/vector_length.html
@@ -31,19 +31,18 @@
         <p data-tt="hint1">To calculate the length of a vector, we first calculate the dot product of the vector with itself by multiplying each element in <code>\color{#6495ED}{\vec a}</code> with itself, then we sum all the products. <br>The length of the vector is the square root of that sum.</p>
 
         <div>
-            <p>Thus, we do <code> \sum\limits_{i=0}^{n} \color{#6495ED}{\vec a}_i \times \color{#6495ED}{\vec a}_i </code> where <code> n = </code> vector length. </p>
+            <p>Thus, we do <code> \sqrt{\sum\limits_{i=0}^{n} \color{#6495ED}{\vec a}_i \times \color{#6495ED}{\vec a}_i} </code> where <code> n = </code> vector length. </p>
         </div>
         <div>
-            <p>For <code>\color{#6495ED}{\vec a}</code> that is <code><var>showDot(VA,VA)</var> </code>
+            <p>For <code>\color{#6495ED}{\vec a}</code> that is <code>\sqrt{<var>showDot(VA,VA)</var>} </code>
         </div>
 		<div>
-			<p>That is <code> <var>showHalfdot(VA,VA)</var> </code></p>
+			<p>That is <code> \sqrt{<var>showHalfdot(VA,VA)</var>} </code></p>
 		</div>
 
 		<div>
-			<p><code>= <var>DOT</var></code></p>
+			<p><code>= \sqrt{<var>DOT</var>}</code></p>
 		</div>
-		     <p>The only thing left to determine the length of the vector is taking the square root of <var>DOT</var></p>
              <p>The square root of <var>DOT</var> is <var>VLEN</var></p>               
         </div>
     </div>
