--- a/khan-exercises/exercises/angle_between_vectors.html
+++ b/khan-exercises/exercises/angle_between_vectors.html
@@ -12,29 +12,33 @@
         <var id="VA">genVector(LEN)</var>
         <var id="VB">genVector(LEN)</var>
         <var id="DOT">dotProduct(VA,VB)</var>
-
+        <var id="DOT1">dotProduct(VA,VA)</var>
+        <var id="DOT2">dotProduct(VB,VB)</var>
+        <var id="SOL">DOT/(Math.sqrt(DOT1)*Math.sqrt(DOT2))</var>
+        <var id="ROUND">Math.round(SOL*100)/100</var>
     </div>
 
     <div class="problems">
         <div>
             <div class="question">
 
-                <p data-tt="question1">Given the vectors <code>\color{#6495ED}{\vec a} = <var>writeVector(VA)</var> </code> and <code> \color{#28AE7B}{\vec b} = <var>writeVector(VB)</var></code>, what is the cosine of the angle between <code>\color{#6495ED}{\vec a} </code> and <code>\color{#28AE7B}{\vec b}</code>?</p>
-
+                <p data-tt="question1">There are two vectors, <code>\color{#6495ED}{\vec a} = <var>writeVector(VA)</var> </code> and <code> \color{#28AE7B}{\vec b} = <var>writeVector(VB)</var></code></p>
+<p>What is the cosine of the angle <code> \theta </code> between <code>\color{#6495ED}{\vec a} </code> and <code>\color{#28AE7B}{\vec b}</code>?</p>
+<p>Round to 2 decimals.</p>
             </div>
-            <div class = "solution" data-type="decimal"><var>DOT</var></div>
+            <div class = "solution" data-type="decimal"><var>ROUND</var></div>
 
         </div>
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">To calculate the angle between two vectors, we use the formula <code>\cos(\theta) =  \frac{\vec x \cdot \vec y}{||\vec x|| \hspace{1 pt} ||\vec y||} </code>
+        <p data-tt="hint1">To calculate the cosine of the angle between two vectors, we use the formula <code>\cos(\theta) =  \frac{\vec x \cdot \vec y}{||\vec x|| \hspace{1 pt} ||\vec y||} </code>
         
         <div>
-            <p>Thus, we do <code> \sum\limits_{i=0}^{n} \color{#6495ED}{\vec a}_i \times \color{#28AE7B}{\vec b}_i </code> where <code> n = </code> vector length. </p>
+            <p>First, we calculate the dot product of <code>\color{#6495ED}{\vec a}</code> and <code>\color{#28AE7B}{\vec b}</code>:<br> <code> \sum\limits_{i=0}^{n} \color{#6495ED}{\vec a}_i \times \color{#28AE7B}{\vec b}_i </code> where <code> n = </code> vector length. </p>
         </div>
         <div>
-            <p>For <code>\color{#6495ED}{\vec a}</code> and <code>\color{#28AE7B}{\vec b}</code>, that is <code><var>showDot(VA,VB)</var> </code>
+            <p>For <code>\color{#6495ED}{\vec a}</code> and <code>\color{#28AE7B}{\vec b}</code>, that is <code><var>showDot(VA,VB)</var> </code></p>
         </div>
 		<div>
 			<p>That is <code> <var>showHalfdot(VA,VB)</var> </code></p>
@@ -43,7 +47,32 @@
 		<div>
 			<p><code>= <var>DOT</var></code></p>
 		</div>
-                            
+        <div>
+            <p>Then, we calculate the lengths of <code>\vec a</code> and <code>\vec b</code> by taking the square root of the dot product of the vector with itself.</p>
+        </div>
+        <div>
+            <p>
+             <code>\color{#6495ED}{\vec a}</code>: <code>\sqrt{<var>showDot(VA,VA)</var>} </code><br>
+            <code>\color{#28AE7B}{\vec b}</code>: <code>\sqrt{<var>showDot(VB,VB)</var>} </code>
+            </p>
+        </div>
+        <p>
+        	<code>\color{#6495ED}{\vec a}</code>: <code> \sqrt{<var>showHalfdot(VA,VA)</var>} </code><br>
+        	<code>\color{#28AE7B}{\vec b}</code>: <code> \sqrt{<var>showHalfdot(VB,VB)</var>} </code>
+        </p>
+        <p>
+        <code>\color{#6495ED}{\vec a} = \sqrt{<var>DOT1</var>}</code><br>
+        <code>\color{#28AE7B}{\vec b} = \sqrt{<var>DOT2</var>}</code>
+        </p>
+        <p>
+             Multiplying <code>\sqrt{<var>DOT1</var>}</code> and <code>\sqrt{<var>DOT2</var>}</code>, we get <code>\sqrt{<var>DOT1*DOT2</var>}</code>.
+        </p>
+        <p>
+            Now, divide <var>DOT</var> by <code>\sqrt{<var>DOT1*DOT2</var>}</code>
+        </p>
+        <p>
+            <code>\frac{<var>DOT</var>}{\sqrt{<var>DOT1*DOT2</var>}} = <var>DOT/Math.sqrt(DOT1*DOT2)</var><br>Rounding to 2 decimals gives us <var>ROUND</var>
+        </p>
         </div>
     </div>
     </div>
