--- a/khan-exercises/exercises/breuken_vergelijken_2.html
+++ b/khan-exercises/exercises/breuken_vergelijken_2.html
@@ -57,7 +57,7 @@
                 <div class="hints">
                     <p>Het is makkelijker te vergelijken als de twee breuken dezelfde noemer hebben.</p>
                     <p>Het kleinste gemene veelvoud van <var>DEN_1</var> en <var>DEN_2</var> is</p>
-                    <p><code>\lcm(<var>DEN_1</var>, <var>DEN_2</var>) = <var>LCM</var></code></p>
+                    <p><code>kgv(<var>DEN_1</var>, <var>DEN_2</var>) = <var>LCM</var></code></p>
                     <div>
                         <p>De eerste breuk <var>BECOMES_1</var> <code>\dfrac{<var>NUM_1 * F1</var>}{<var>LCM</var>}</code>.</p>
                         <p>De tweede breuk <var>BECOMES_2</var> <code>\dfrac{<var>NUM_2 * F2</var>}{<var>LCM</var>}</code>.</p>
