--- a/khan-exercises/exercises/multiplication_0.5.html
+++ b/khan-exercises/exercises/multiplication_0.5.html
@@ -36,7 +36,7 @@
                 <div>
                     <div class="graphie" data-update="numbers" data-tt="hint1">
                     label( [ 0, B - 2 ], "\\text{"
-                            + "Als er " +  plural( B, "rij" ) + ( B === 1 ? " is " : " zijn " ) 
+                            + "Als er " +  plural( B, "regel" ) + ( B === 1 ? " is " : " zijn " ) 
                             + " met elk " + plural( A, "cirkel" )  
                             + ", hoeveel cirkels zijn er dan totaal?"
                             + "}",
